Make sure all JavaPoster requests use the proxy is present, and move Multipart to server code.
This also means all JAva clients will use http2!